--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>One Click</title>
     <link rel="stylesheet" href="%PUBLIC_URL%/styles.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
 </head>
 <body>
